--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Django==1.10.5
 google-api-python-client==1.6.2
 httplib2==0.10.3
 oauth2client==4.0.0
+olefile==0.44
 packaging==16.8
+Pillow==4.1.0
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pyparsing==2.1.10
