--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,36 @@
 appdirs==1.4.1
+astroid==1.6.5
+backports.functools-lru-cache==1.5
+certifi==2018.11.29
+chardet==3.0.4
+configparser==3.7.1
 Django==1.11.18
+enum34==1.1.6
+futures==3.2.0
 httplib2==0.10.3
+idna==2.8
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+oauthlib==3.0.1
 olefile==0.44
 packaging==16.8
 Pillow==4.1.0
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
+PyJWT==1.7.1
+pylint==1.9.4
 pyparsing==2.1.10
 python-dateutil==2.6.0
+python-openid==2.2.5
 pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
 rsa==3.4.2
+singledispatch==3.4.0.3
 six==1.10.0
+social-auth-app-django==3.1.0
+social-auth-core==3.0.0
 uritemplate==3.0.0
+urllib3==1.24.1
+wrapt==1.11.1
